--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,8 +10,10 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY app ./app
+COPY entrypoint.sh /entrypoint.sh
+
+RUN chmod +x /entrypoint.sh
 
 ENV PYTHONUNBUFFERED=1
 
-# IMPORTANT: shell form so $PORT expands
-CMD sh -c "uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000}"
+ENTRYPOINT ["/entrypoint.sh"]
